src/styles/components/_comments.scss
.comments-section {
    @include ui-status;
}

.comment {
    display: flex;
    align-items: flex-start;
    margin: $margin 0;
    border-top: solid 1px $light-neutral-color;
    padding-top: $padding;
}

.comment>.comment {
    margin-left: 48px;
}

.comment-avatar {
    flex: 0 0 48px;
}

.comment-content {
    padding-left: $padding;
}

.comment-meta {
    font-size: $font-size-s;
    color: $dark-neutral-color;
    margin-bottom: $margin;
}

.comment-author {
    font-weight: bold;
}

.comment-date {
    color: $medium-neutral-color;
}

.comment-form {
    position: relative;
    @include ui-status;
    margin: $margin auto;
    &.error .ui-status.loaded,
    &.loading .ui-status.loaded {
        display: block;
    }
    .form-group {
        margin: $margin auto;
        &>button {
            display: block;
            width: 100%;
        }
    }
}

.comment-form > .overlay {
    position: absolute;
    left: 0;
    right: 0;
    max-width: 400px;
    margin: 0 auto;
    z-index: 100;
    background-color: rgba(0, 0, 0, .7);
}

